--- a/index.html
+++ b/index.html
@@ -33,15 +33,26 @@
                 </a>
             </section>
             <div class="icones">
-
+                <!-- icones da direita -->
                 <a class="iconesair" href="/styles/img/sair.svg">
                     <img class="img_sair" src="/styles/img/sair.png" alt="sair">
                 </a>
-                <a class="iconeportasabertas" href="/styles/img/porta-aberta.png">
-                    <img class="img_portas_abertas" src="/styles/img/porta-aberta.png" alt="porta-abertas">
+                <a class="iconemaiszoom" href="/styles/img/mais-zoom.png">
+                    <img class="img_mais_zoom" src="/styles/img/mais-zoom.png" alt="Mais Zoom">
                 </a>
-                <a class="iconeportamalas" href="/styles/img/porta-malas.png">
-                    <img class="img_porta_malas" src="/styles/img/porta-malas.png" alt="porta-malas">
+                <a class="iconereduzirzoom" href="/styles/img/reduzir-zoom.png">
+                    <img class="img_reduzir_zoom" src="/styles/img/reduzir-zoom.png" alt="Reduzir Zoom">
+                </a>
+                
+                <!-- icones da esquerda -->
+                <a class="iconesetadireita" href="/styles/img/seta-direita.png">
+                    <img class="img_seta_direita" src="/styles/img/seta-direita.png" alt="sair">
+                </a>
+                <a class="iconesetaesquerda" href="/styles/img/seta-esquerda.png">
+                    <img class="img_seta_esquerda" src="/styles/img/seta-esquerda.png" alt="sair">
+                </a>
+                <a class="iconeportasabertas" href="/styles/img/portas-abertas.png">
+                    <img class="img_portas_abertas" src="/styles/img/portas-abertas.png" alt="porta-abertas">
                 </a>
             </div>
 
@@ -160,16 +171,13 @@
 
         <!-- Menu lateral Direiro -->
         <div onclick="mostrardescricao()">
-            <div class="right_texto desc_nome_carro">Monkey Dealership</div>
-             <div class="right_texto descricao_carro">
-                <p>descricao descricao descricao descricao descricao</p>
-            </div>
-            <div class="right_texto desc_valor_kg">Kg e valor</div>
+            <div class="desc_nome_carro">Monkey Dealership</div>
+            <div class="right_texto desc_valor">Valor</div>
+            <div class="right_texto desc_kg">Kg</div>
             <div class="right_texto desc_acel">Aceleracao</div>
             <div class="right_texto desc_vel">Vel.Max</div>
             <div class="right_texto desc_ade">Aderencia</div>
             <div class="right_texto desc_fre">Frenagem</div>
-            <!-- <div class="right_perspective"></div> -->
         </div>
 
 
